# mjklaim-freewindows

./: .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  ReadMe.txt  authors.txt  readme.txt  todolist.txt
common/xsd/: CMakeLists.txt  xsd.cxx.bakup
tools/aosdesigner/: Application.cpp  Application.hpp  CMakeLists.txt  Paths.cpp  Paths.hpp  main.cpp  readme.txt
tools/aosdesigner/core/: CMakeLists.txt  Context.cpp  Context.hpp  EditionSession.cpp  EditionSession.hpp  EditionSessionId.cpp  EditionSessionId.hpp  EditionSessionInfos.hpp  ForwardCore.hpp  Library.cpp  Library.hpp  Project.cpp  Project.hpp  ProjectInfos.hpp  Resource.hpp  Sequence.cpp  Sequence.hpp  SequenceId.hpp  SequenceInfos.hpp  StoryWalker.cpp  StoryWalker.hpp  StoryWalkerId.hpp
tools/aosdesigner/core/resources/: Resource.cpp  Resource.hpp  ResourceFactory.cpp  ResourceFactory.hpp  ResourceInfo.hpp  ResourceProvider.cpp  ResourceProvider.hpp  ResourcePtr.hpp  ResourceRef.hpp  URI.hpp
tools/aosdesigner/state/: ApplicationSM.hpp  DesignerStateMachine.cpp  DesignerStateMachine.hpp  EditingProject.cpp  EditingProject.hpp  Events.hpp  Idle.cpp  Idle.hpp  States.hpp  Welcome.cpp  Welcome.hpp
tools/aosdesigner/util/: Assert.hpp  Log.cpp  Log.hpp  Singleton.hpp
tools/aosdesigner/view/: ActionsProvider.hpp  ApplicationView.cpp  ApplicationView.hpp  CMakeLists.txt  CanvasGraphicsView.cpp  CanvasGraphicsView.hpp  CanvasInvisibleObjectsView.hpp  CanvasView.cpp  CanvasView.hpp  ChangesView.cpp  ChangesView.hpp  DesignerActions.cpp  DesignerActions.hpp  DialogPrompt.cpp  DialogPrompt.hpp  Dialogs.cpp  Dialogs.hpp  EditionToolView.cpp  EditionToolView.hpp  Editor.cpp  Editor.hpp  EditorManager.cpp  ForwardView.hpp  FreeWindow.cpp  FreeWindow.hpp  FreeWindowManager.cpp  FreeWindowManager.hpp  LayersView.cpp  LayersView.hpp  LibrariesView.cpp  LibrariesView.hpp  LogView.cpp  LogView.hpp  MainWindow.cpp  MainWindow.hpp  NewProjectDialog.cpp  NewProjectDialog.hpp  NewSequenceDialog.cpp  NewSequenceDialog.hpp  ObjectsView.cpp  (+14 more)
tools/aosdesigner/view/dialog/: NewEditionSessionDialog.cpp  NewEditionSessionDialog.hpp  NewProjectDialog.cpp  NewProjectDialog.hpp  NewSequenceDialog.cpp  NewSequenceDialog.hpp  WelcomeScreen.cpp  WelcomeScreen.hpp
tools/aosdesigner/view/editor/: CanvasGraphicsView.cpp  CanvasGraphicsView.hpp  CanvasInvisibleObjectsView.cpp  CanvasInvisibleObjectsView.hpp  CanvasView.cpp  CanvasView.hpp  Editor.cpp  Editor.hpp  EditorManager.cpp  EditorManager.hpp  StoryView.hpp
tools/aosdesigner/view/editor/canvas/: CanvasGraphicsView.hpp  CanvasInvisibleObjectsView.hpp
tools/aosdesigner/view/model/: CanvasLayersModel.cpp  CanvasLayersModel.hpp  CanvasObjectsModel.cpp  CanvasObjectsModel.hpp  LastChangesModel.cpp  LastChangesModel.hpp  LayerObjectsModel.cpp  LayerObjectsModel.hpp  LibraryModel.cpp  LibraryModel.hpp  ModelViewBinder.cpp  ModelViewBinder.hpp
tools/aosdesigner/view/ui/: MainWindow.ui  NewEditionSessionDialog.ui  NewProjectDialog.ui  NewSequenceDialog.ui  WelcomeScreen.ui
tools/aoslcpp/: CMakeLists.txt  readme.txt
tools/aoslcpp/include/aoscpp/: aoscpp_common.h
tools/aoslcpp/include/aosl/: activation.inl  activation_forward.hpp  angle.hpp  angle.inl  angle_forward.hpp  angle_type.hpp  angle_type_forward.hpp  aosl.hpp  aosl.inl  aosl_forward.hpp  author.inl  author_forward.hpp  axis_origin_x.hpp  axis_origin_x_forward.hpp  axis_origin_y.hpp  axis_origin_y_forward.hpp  axis_origin_z.hpp  axis_origin_z.inl  axis_origin_z_forward.hpp  axis_positive_x.hpp  axis_positive_y.hpp  axis_positive_y_forward.hpp  axis_positive_z.hpp  axis_positive_z.inl  axis_x.hpp  axis_x.inl  axis_x_forward.hpp  axis_y.hpp  axis_y.inl  axis_y_forward.hpp  axis_z.hpp  axis_z.inl  axis_z_forward.hpp  box.hpp  box.inl  box_forward.hpp  canvas.hpp  canvas.inl  canvas_forward.hpp  change.hpp  (+230 more)
tools/aoslcpp/include/aoslcpp/: CanvasState.hpp  NavigationState.hpp  SequenceInterpreter.hpp  StoryGraph.hpp  StoryPath.hpp  _find.hpp  algorithm.hpp  aoslcpp.hpp  common.h  common.hpp  for_each.hpp
tools/aoslcpp/include/aoslcpp/algorithm/: Object.hpp  algorithm.hpp  edition.hpp  execution.hpp  find.hpp  for_each.hpp  function.hpp  iterator.hpp
tools/aoslcpp/include/aoslcpp/aosl/: activation.hpp  activation.inl  activation_forward.hpp  angle.hpp  angle_forward.hpp  angle_type.hpp  angle_type.inl  angle_type_forward.hpp  aosl.hpp  aosl.inl  aosl_forward.hpp  author.hpp  author.inl  author_forward.hpp  axis_origin_x.hpp  axis_origin_x.inl  axis_origin_x_forward.hpp  axis_origin_y.hpp  axis_origin_y.inl  axis_origin_y_forward.hpp  axis_origin_z.hpp  axis_origin_z.inl  axis_origin_z_forward.hpp  axis_positive_x.hpp  axis_positive_x.inl  axis_positive_x_forward.hpp  axis_positive_y.hpp  axis_positive_y.inl  axis_positive_y_forward.hpp  axis_positive_z.hpp  axis_positive_z.inl  axis_positive_z_forward.hpp  axis_x.hpp  axis_x.inl  axis_y.hpp  (+270 more)
tools/aoslcpp/script/: generate_cpp.bat  generate_cpp.cfg  generate_cpp.py  generated_header_prologue.txt  generated_source_prologue.txt  readme.txt
tools/aoslcpp/source/: CanvasState.cpp  ForEach.cpp  NavigationState.cpp  SequenceInterpreter.cpp  StoryGraph.cpp  StoryPath.cpp  _find.cpp  common.cpp  find.cpp  for_each.cpp
tools/aoslcpp/source/algorithm/: Object.cpp  edition.cpp  execution.cpp  find.cpp  for_each.cpp  iterator.cpp
tools/aoslcpp/source/aosl/: activation.cpp  angle.cpp  angle_type.cpp  aosl.cpp  author.cpp  axis_origin_x.cpp  axis_origin_y.cpp  axis_origin_z.cpp  axis_positive_x.cpp  axis_positive_y.cpp  axis_positive_z.cpp  axis_x.cpp  axis_y.cpp  axis_z.cpp  box.cpp  canvas.cpp  change.cpp  change_activate.cpp  change_deactivate.cpp  change_special.cpp  change_switch.cpp  change_transform.cpp  change_transform_base.cpp  change_type.cpp  change_type_generic.cpp  change_type_specific.cpp  controller.cpp  coordinate_system.cpp  effect.cpp  email.cpp  event.cpp  event_input.cpp  event_input_base.cpp  event_selection.cpp  event_selection_base.cpp  event_signal.cpp  event_signal_base.cpp  event_type.cpp  extension.cpp  input_key.cpp  (+69 more)
tools/aoslcpp/test/: CMakeLists.txt  test.cpp
(+38 files in other folders)
